--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '2'
-
+networks:
+  cloudstart:
+    external: false
 services:
   nginx:
     image: nginx:stable
@@ -10,11 +12,13 @@ services:
       - ./dev/etc/nginx/ssl:/etc/nginx/ssl
       - ./frontend:/usr/share/nginx/html
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+      - "443:443"
     environment:
       TOMCAT_URL: http://tomcat:8080/backend/
       KEYCLOAK_URL: http://keycloak:8080/auth/
+    networks:
+      - cloudstart
 
   mariadb:
     image: mariadb:10.5
@@ -30,14 +34,22 @@ services:
       - mariadb:/bitnami/mariadb
       - mariadb-boot:/opt/bitnami/mariadb/.bootstrap
     ports:
-      - 3306:3306
+      - "3306:3306"
+    networks:
+      - cloudstart
 
   tomcat:
     image: tomcat:9
     volumes:
       - ./target/StarterProject-1.0-SNAPSHOT:/usr/local/tomcat/webapps/backend
     ports:
-      - 8080:8080
+      - "8080:8080"
+    environment:
+      MYSQL_USER: "starterUser"
+      MYSQL_PASSWORD: "Demo12+#"
+      MYSQL_URL: "jdbc:mysql://mariadb:3306/starterProject"
+    networks:
+      - cloudstart
 
 volumes:
   mariadb:
